# TreemapWriter2

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_FORENSIC_AUDIT.md  ClaudesPlanProspectiveMemory.md  README.md  STATUS.md  eslint.config.js  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.design-sync/: NOTES.md  analyze-clean-set.mjs  config.json  conventions.md  regen.mjs
.design-sync/previews/: Pip.tsx  (+39 more)
agent-sidecar/: .env.example  README.md  package.json  server.mjs
docs/: ARCHITECTURE.md  FOUNDING.md  VISION.md  ai-integration-audit.md  architecture-analysis.html  arpeggio-integration.md  arpeggio-spec.md  configuration-and-sequence.md  dewey-design.md  dialogue-design.md  gestalt-and-text-structure.md  gestalt-design-II.md  gestalt-design-III.md  gestalt-design-IV.md  gestalt-design.md  id-strategy.md  living-sprints-plan.md  migration-log.md  phase-5.md  refactor-plan.md  structural-part-audit.md  task-system.md  ux-audit.md
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  types.rs
src-tauri/src/commands/: agent_fs.rs  credentials.rs  document.rs  export.rs  inbox.rs  ledger.rs  migration.rs  mod.rs  project.rs  search.rs  session.rs  snapshot.rs  sync.rs
src-tauri/src/db/: index.rs  mod.rs  schema.sql
src-tauri/src/fs_io/: mod.rs  yaml.rs
src-tauri/src/git/: merge.rs  mod.rs  remote.rs
src-tauri/src/project/: layout.rs  mod.rs
(+675 files in other folders)
