[package]
name = "treemap-writer"
version = "0.1.0"
description = "TreemapWriter desktop shell"
authors = ["TreemapWriter contributors"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "treemap_writer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1" }
tauri-plugin-log = "2"
